fix: inquiry page on mobile

--- a/_includes/css/pages/inquiry.css
+++ b/_includes/css/pages/inquiry.css
@@ -19,3 +19,22 @@
 .inquiry-card-image {
   width: 400px;
 }
+
+.inquiry-card-button {
+  text-align: center;
+}
+
+@media only screen and (max-width: 800px) {
+  .inquiry-cards {
+    width: 90%;
+    gap: 1rem;
+    padding: 1rem;
+  }
+  .inquiry-card {
+    flex-direction: column;
+    padding: 1rem;
+  }
+  .inquiry-card-image {
+    width: 100%;
+  }
+}
